--- a/prj-02-max-entre-2-valores/index.html
+++ b/prj-02-max-entre-2-valores/index.html
@@ -14,6 +14,7 @@
     <form name="meu_form">
 
         <h1>Maximo entre 2 valores</h1>
+        <h2>Apenas valore inteiros, maiores do que 0!!!</h2>
 
         <input type="text" id="var1" placeholder="Digite o primeiro valor" required="required" name="nome" />
         <label for="nome">Valor 1</label>
