--- a/prj-10-numeros-primos/index.html
+++ b/prj-10-numeros-primos/index.html
@@ -7,19 +7,19 @@
     <link href="style.css" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="style.css">
     <script src="./app.js"></script>
-    <title>--Projeto 1--</title>
+    <title>--Projeto 10--</title>
 </head>
 
 <body>
     <form name="meu_form">
 
-        <h1>Maximo entre 2 valores</h1>
+        <h1>Numeros primos</h1>
 
-        <input type="text" id="nomeid" placeholder="Digite o primeiro valor" required="required" name="nome" />
-        <label for="nome">Valor 1</label>
+        <input type="text" id="primo" placeholder="Digite algum valor" required="required" name="nome" />
+        <label for="nome">Valor</label>
 
-        <input type="text" id="foneid" placeholder="Digite o segundo valor" name="fone" />
-        <label for="fone">Valor 2</label>
+        <!-- <input type="text" id="foneid" placeholder="Digite o segundo valor" name="fone" />
+        <label for="fone">Valor 2</label> -->
 
         <!-- <input type="text" id="emailid" placeholder="fulano@mail.com" name="email" />
         <label for="email">Email</label>
