atualizações de exercicios

--- a/prj-11-montador-de-endereços/index.html
+++ b/prj-11-montador-de-endereços/index.html
@@ -7,19 +7,22 @@
     <link href="style.css" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="style.css">
     <script src="./app.js"></script>
-    <title>--Projeto 1--</title>
+    <title>--Projeto 11--</title>
 </head>
 
 <body>
     <form name="meu_form">
 
-        <h1>Maximo entre 2 valores</h1>
+        <h1>Montador de endereços</h1>
 
-        <input type="text" id="nomeid" placeholder="Digite o primeiro valor" required="required" name="nome" />
-        <label for="nome">Valor 1</label>
+        <input type="text" id="rua" placeholder="Digite o numero da Rua" required="required" name="nome" />
+        <label for="nome">Rua</label>
 
-        <input type="text" id="foneid" placeholder="Digite o segundo valor" name="fone" />
-        <label for="fone">Valor 2</label>
+        <input type="text" id="cidade" placeholder="Digite o nome da cidade" name="fone" />
+        <label for="fone">Cidade</label>
+
+        <input type="text" id="cep" placeholder="Digite o CEP" name="fone" />
+        <label for="fone">CEP</label>
 
         <!-- <input type="text" id="emailid" placeholder="fulano@mail.com" name="email" />
         <label for="email">Email</label>
