--- a/prj-12-encontre-a-igualdade/index.html
+++ b/prj-12-encontre-a-igualdade/index.html
@@ -7,19 +7,31 @@
     <link href="style.css" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="style.css">
     <script src="./app.js"></script>
-    <title>--Projeto 1--</title>
+    <title>--Projeto 12--</title>
 </head>
 
 <body>
     <form name="meu_form">
 
-        <h1>Maximo entre 2 valores</h1>
+        <h1>Encontrando igualdades</h1>
 
-        <input type="text" id="nomeid" placeholder="Digite o primeiro valor" required="required" name="nome" />
-        <label for="nome">Valor 1</label>
+        <input type="text" id="rua1" placeholder="Digite o primeiro valor" required="required" name="nome" />
+        <label for="nome">Rua 1</label>
 
-        <input type="text" id="foneid" placeholder="Digite o segundo valor" name="fone" />
-        <label for="fone">Valor 2</label>
+        <input type="text" id="cidade1" placeholder="Digite o segundo valor" name="fone" />
+        <label for="fone">Cidade 1</label>
+
+        <input type="text" id="cep1" placeholder="Digite o segundo valor" name="fone" />
+        <label for="fone">CEP 1</label>
+
+        <input type="text" id="rua2" placeholder="Digite o primeiro valor" required="required" name="nome" />
+        <label for="nome">Rua 2</label>
+
+        <input type="text" id="cidade2" placeholder="Digite o segundo valor" name="fone" />
+        <label for="fone">Cidade 2</label>
+
+        <input type="text" id="cep2" placeholder="Digite o segundo valor" name="fone" />
+        <label for="fone">CEP 2</label>
 
         <!-- <input type="text" id="emailid" placeholder="fulano@mail.com" name="email" />
         <label for="email">Email</label>
