--- a/prj-13-montador-de-postagem-de-blog/index.html
+++ b/prj-13-montador-de-postagem-de-blog/index.html
@@ -7,13 +7,13 @@
     <link href="style.css" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="style.css">
     <script src="./app.js"></script>
-    <title>--Projeto 1--</title>
+    <title>--Projeto 13--</title>
 </head>
 
 <body>
     <form name="meu_form">
 
-        <h1>Maximo entre 2 valores</h1>
+        <h1>Montador de Postagem</h1>
 
         <input type="text" id="nomeid" placeholder="Digite o primeiro valor" required="required" name="nome" />
         <label for="nome">Valor 1</label>
