Finalizado desafios Dev Aprender

--- a/prj-13-montador-de-postagem-de-blog/index.html
+++ b/prj-13-montador-de-postagem-de-blog/index.html
@@ -15,11 +15,26 @@
 
         <h1>Montador de Postagem</h1>
 
-        <input type="text" id="nomeid" placeholder="Digite o primeiro valor" required="required" name="nome" />
-        <label for="nome">Valor 1</label>
+        <input type="text" id="titulo" value="titulo" placeholder="Digite o titulo " required="required" name="nome" />
+        <label for="nome">Titulo</label>
 
-        <input type="text" id="foneid" placeholder="Digite o segundo valor" name="fone" />
-        <label for="fone">Valor 2</label>
+        <input type="text" id="mensagem"  value="titulo" placeholder="Digite a mensagem" name="fone" />
+        <label for="fone">Mensagem</label>
+
+        <!--<input type="text" id="autor"  value="titulo" placeholder="Digite o nome do autor " required="required" name="nome" />
+        <label for="nome">Autor</label>
+
+         <input type="text" id="comentario__autor"  value="titulo" placeholder="Digite o autor do comentario" name="fone" />
+        <label for="fone">Comentario Autor</label>
+
+        <input type="text" id="comentario__mensagem"  value="titulo" placeholder="Digite a mensagem do comentario" name="fone" />
+        <label for="fone">Comentario Mensagem</label> 
+
+        <input type="text" id="visualizacoes"  value="titulo" placeholder="Quantas visualizações?" required="required" name="nome" />
+        <label for="nome">Visualizacoes</label>
+
+        <input type="text" id="esta_ao_vivo" value="titulo"  placeholder="Esta oa vivo [True / False]? " name="fone" />
+        <label for="fone">Esta ao Vivo</label>-->
 
         <!-- <input type="text" id="emailid" placeholder="fulano@mail.com" name="email" />
         <label for="email">Email</label>
